# construction-leasing-agent

./: .env  .env.example  .gitignore  README.md  agent.py  app.py  checked_dates.json  client.py  fedresurs.py  main.py  mcp_adapter.py  pyproject.toml  requirements.txt  scraping.ipynb  server.py  test.py  test1.py
agent/: agent.py
data/: contracts.json  structured_data.json
parser/: parser.py
